evenframe_core/tests/snapshots/snapshot_tests__flatbuffers__flatbuffers_enum_adjacently_tagged.snap
---
source: evenframe_core/tests/snapshot_tests.rs
expression: output
---
union Event {
    EventClick,
    EventKeyPress,
    EventScroll
}

table ClickData {
    x: int32;
    y: int32;
}

table EventClick {
    value: ClickData;
}

table EventKeyPress {
    value: string;
}

table EventScroll {
}
