evenframe_core/tests/snapshots/snapshot_tests__flatbuffers__flatbuffers_enum_externally_tagged.snap
---
source: evenframe_core/tests/snapshot_tests.rs
expression: output
---
enum Status : ubyte {
    Active = 0,
    Inactive = 1,
    Pending = 2,
    Suspended = 3
}
