evenframe_core/tests/snapshots/snapshot_tests__flatbuffers__flatbuffers_enum_internally_tagged.snap
---
source: evenframe_core/tests/snapshot_tests.rs
expression: output
---
union Shape {
    ShapeCircle,
    ShapeRectangle,
    ShapePoint
}

table CircleData {
    radius: double;
}

table RectangleData {
    width: double;
    height: double;
}

table ShapeCircle {
    value: CircleData;
}

table ShapeRectangle {
    value: RectangleData;
}

table ShapePoint {
}
