evenframe_core/tests/snapshots/snapshot_tests__flatbuffers__flatbuffers_enum_internally_tagged_inline.snap
---
source: evenframe_core/tests/snapshot_tests.rs
expression: output
---
union Shape {
    ShapeCircle,
    ShapeRectangle,
    ShapePoint
}

table ShapeCircle {
    radius: double;
}

table ShapeRectangle {
    width: double;
    height: double;
}

table ShapePoint {
}
