evenframe_core/tests/snapshots/snapshot_tests__flatbuffers__flatbuffers_enum_partially_untagged.snap
---
source: evenframe_core/tests/snapshot_tests.rs
expression: output
---
union Contact {
    ContactPhone,
    ContactNobody,
    ContactEmail,
    ContactPostal
}

table Phone {
    number: string;
}

table Postal {
    street: string;
    city: string;
}

table ContactPhone {
    value: Phone;
}

table ContactNobody {
}

table ContactEmail {
    value: string;
}

table ContactPostal {
    value: Postal;
}
