evenframe_core/tests/snapshots/snapshot_tests__flatbuffers__flatbuffers_enum_untagged.snap
---
source: evenframe_core/tests/snapshot_tests.rs
expression: output
---
union Value {
    ValueText,
    ValueNumber,
    ValueFlag,
    ValueNothing
}

table ValueText {
    value: string;
}

table ValueNumber {
    value: double;
}

table ValueFlag {
    value: bool;
}

table ValueNothing {
}
