evenframe_core/tests/snapshots/snapshot_tests__flatbuffers__flatbuffers_enum_with_data.snap
---
source: evenframe_core/tests/snapshot_tests.rs
expression: output
---
union Location {
    LocationAddress,
    LocationCoords,
    LocationInline,
    LocationUnknown
}

table Coordinates {
    lat: double;
    lng: double;
}

table InlineData {
    label: string;
    value: int64;
}

table LocationAddress {
    value: string;
}

table LocationCoords {
    value: Coordinates;
}

table LocationInline {
    value: InlineData;
}

table LocationUnknown {
}
