evenframe_core/tests/snapshots/snapshot_tests__flatbuffers__flatbuffers_foreign_types.snap
---
source: evenframe_core/tests/snapshot_tests.rs
expression: output
---
table Appointment {
    id: string;
    title: string;
    scheduled_at: string;
    duration: int64;
    cancelled_at: string;
}
